[tool.poetry]
name = "options calculator"
version = "0.0.1"
description = "Calculate Options prices, greeks, and plot them"
authors = ["kamysheblid <kamysheblid@gmail.com>"]
license = "LICENSE"
readme = "code.org"

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.14.2"
dash-bootstrap-components = "^1.5.0"
dash-bootstrap-templates = "^1.1.2"
dash-core-components = "^2.0.0"
numpy = "^1.26.3"
plotly = "^5.18.0"
pandas = "^2.1.4"
sympy = "^1.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
# requires = ["setup-tools>=61.0"]
# build-backend = "setuptools.build_meta"
